Fixed slider overlapping popup

--- a/src/blocks/items-popup/popup.sass
+++ b/src/blocks/items-popup/popup.sass
@@ -14,6 +14,7 @@
     box-sizing: border-box
     background-color: #fff
     height: 100%
+    z-index: 3
 
 .items-popup__item
     display: flex
